--- a/frontend/control.html
+++ b/frontend/control.html
@@ -751,6 +751,28 @@
       .logout-btn {
         width: 100%;
       }
+
+      .bulk-status {
+        flex-direction: column;
+        gap: 0.7rem;
+      }
+
+      .bulk-status select {
+        order: 2;
+      }
+
+      .bulk-status label {
+        order: 1;
+      }
+
+      .bulk-status .custom-expiry-btn-small {
+        order: 3;
+        align-self: center;
+      }
+
+      .bulk-status button:not(.custom-expiry-btn-small) {
+        order: 4;
+      }
     }
 
     /* Custom Expiry Modal Styles */
