--- a/frontend/control.html
+++ b/frontend/control.html
@@ -768,10 +768,17 @@
       .bulk-status .custom-expiry-btn-small {
         order: 3;
         align-self: center;
+        width: 100%;
+        height: 2.5rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
 
       .bulk-status button:not(.custom-expiry-btn-small) {
         order: 4;
+        width: 100%;
+        height: 2.5rem;
       }
     }
 
