--- a/frontend/index.html
+++ b/frontend/index.html
@@ -168,7 +168,8 @@
       font-weight: 600;
     }
 
-    .status.off_duty {
+    .status.off_duty,
+    .status.on_break {
       background: #e5e7eb;
       color: #374151;
       border-radius: 8px;
@@ -472,7 +473,8 @@
       in_meeting: "In Meeting",
       on_weekend: "On Weekend",
       postponed: "Class Postponed",
-      exam_duty: "On Exam Invigilation"
+      exam_duty: "On Exam Invigilation",
+      on_break: "On Break"
     };
 
     const SEGMENTS = {
