--- a/frontend/control.html
+++ b/frontend/control.html
@@ -1505,8 +1505,8 @@
             batchSpan.style.color = "#1e40af";
             batchSpan.style.fontSize = "0.9em"; // Added explicit font size
             batchSpan.style.fontWeight = "500"; // Added font weight
-            roomSpan.style.whiteSpace = "nowrap";
-            roomSpan.style.flexShrink = "0";
+            batchSpan.style.whiteSpace = "nowrap";
+            batchSpan.style.flexShrink = "0";
             infoDiv.appendChild(batchSpan);
           }
 
