--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,26 +58,6 @@
       text-shadow: 1px 1px 2px #00000055;
     }
 
-    #clock {
-      position: fixed;
-      right: 2vw;
-      bottom: 12vh;
-      z-index: 1000;
-      background: #111827;
-      border-radius: 10px;
-      padding: 0.5em 0.4em;
-      width: 280px;
-      height: 80px;
-      overflow: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border: 2px solid #38bdf8;
-      box-shadow: 0 0 16px #38bdf888, 0 0 4px #2563eb;
-      white-space: nowrap;
-      gap: 0.1em;
-    }
-
     .grid {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
@@ -290,9 +270,11 @@
       font-family: 'Orbitron', 'Inter', Arial, sans-serif;
       border-top: 2px solid #374151;
       padding-top: 8px;
+      display: flex;
+      align-items: center;
     }
 
-    #dateDisplay {
+    #dateTimeDisplay {
       position: absolute;
       left: 0;
       top: 8px;
@@ -303,21 +285,36 @@
       font-weight: 600;
       white-space: nowrap;
       border-right: 2px solid #38bdf8;
-      min-width: 120px;
-      max-width: 150px;
+      min-width: 280px;
+      max-width: 300px;
       text-align: center;
       box-shadow: 0 0 8px #2563eb44;
       font-size: 0.85em;
       line-height: 1.1;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
+      align-items: center;
+      justify-content: space-between;
       z-index: 10002;
+      gap: 0.5em;
+    }
+
+    .date-section {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      font-size: 0.9em;
+    }
+
+    .clock-section {
+      display: flex;
+      align-items: center;
+      gap: 0.1em;
+      font-size: 0.8em;
     }
 
     #marqueeText {
       position: absolute;
-      left: 150px;
+      left: 300px;
       top: 8px;
       bottom: 0;
       right: 0;
@@ -391,8 +388,8 @@
 
     /* 7-segment digit SVG component */
     .seven-segment {
-      width: 32px !important;
-      height: 56px !important;
+      width: 16px !important;
+      height: 28px !important;
       display: inline-block;
       vertical-align: middle;
     }
@@ -405,30 +402,30 @@
 
     .seven-segment .seg.lit {
       fill: #38bdf8;
-      filter: drop-shadow(0 0 6px #38bdf8);
+      filter: drop-shadow(0 0 3px #38bdf8);
       opacity: 1;
     }
 
     .digit-bg {
       background: #222;
-      border-radius: 6px;
-      margin: 0 1px;
+      border-radius: 3px;
+      margin: 0 0.5px;
       display: inline-block;
-      box-shadow: 0 0 8px #222;
+      box-shadow: 0 0 4px #222;
     }
 
     .colon {
-      margin: 0 1px;
+      margin: 0 0.5px;
     }
 
     .ampm {
       display: inline-block;
-      width: 2em;
+      width: 1.5em;
       text-align: left;
-      font-size: 0.9em;
-      margin-left: 0.3em;
+      font-size: 0.7em;
+      margin-left: 0.2em;
       color: #60a5fa;
-      letter-spacing: 0.2em;
+      letter-spacing: 0.1em;
       vertical-align: middle;
       font-family: 'Orbitron', 'Inter', 'Segoe UI', monospace, Arial, sans-serif;
     }
@@ -442,7 +439,6 @@
       <h1>Department of Computer Science & Engineering</h1>
       <h2>University of Global Village</h2>
     </div>
-    <div id="clock"></div>
     <img src="images/cse_logo.png" alt="CSE Logo" class="logo">
   </header>
 
@@ -456,7 +452,10 @@
 
   <!-- Marquee Footer -->
   <footer id="marqueeFooter">
-    <div id="dateDisplay"></div>
+    <div id="dateTimeDisplay">
+      <div class="date-section" id="dateDisplay"></div>
+      <div class="clock-section" id="clock"></div>
+    </div>
     <div id="marqueeText"></div>
     <div id="adProgress">
       <div id="adProgressBar"></div>
@@ -571,7 +570,7 @@
       const segs = SEGMENTS[digit] || [];
       return `
         <span class="digit-bg">
-          <svg width="32" height="56" viewBox="0 0 32 56" class="seven-segment">
+          <svg width="16" height="28" viewBox="0 0 32 56" class="seven-segment">
             <rect class="seg seg-a${segs.includes('a') ? ' lit' : ''}" x="4" y="2" width="24" height="4" rx="2"/>
             <rect class="seg seg-b${segs.includes('b') ? ' lit' : ''}" x="26" y="6" width="4" height="20" rx="2"/>
             <rect class="seg seg-c${segs.includes('c') ? ' lit' : ''}" x="26" y="30" width="4" height="20" rx="2"/>
@@ -587,12 +586,12 @@
     function renderColon() {
       return `
         <span class="digit-bg colon">
-          <svg width="12" height="56" viewBox="0 0 12 56">
-            <circle cx="6" cy="16" r="3" fill="#38bdf8" filter="url(#glow)"/>
-            <circle cx="6" cy="40" r="3" fill="#38bdf8" filter="url(#glow)"/>
+          <svg width="6" height="28" viewBox="0 0 12 56">
+            <circle cx="6" cy="16" r="2" fill="#38bdf8" filter="url(#glow)"/>
+            <circle cx="6" cy="40" r="2" fill="#38bdf8" filter="url(#glow)"/>
             <defs>
-              <filter id="glow" x="-5" y="-5" width="22" height="22">
-                <feGaussianBlur stdDeviation="2" result="coloredBlur"/>
+              <filter id="glow" x="-3" y="-3" width="18" height="18">
+                <feGaussianBlur stdDeviation="1" result="coloredBlur"/>
                 <feMerge>
                   <feMergeNode in="coloredBlur"/>
                   <feMergeNode in="SourceGraphic"/>
@@ -1052,7 +1051,7 @@
       }
 
       const container = marquee.parentElement;
-      const containerWidth = container.offsetWidth - 150; // Account for date display
+      const containerWidth = container.offsetWidth - 300; // Account for date-time display
       const textWidth = marquee.scrollWidth;
 
       // If text fits in container, no need to scroll
